# Replace-Markdown-Emojis

./: .gitignore  .pre-commit-config.yaml  BUILD_SUMMARY.md  CHANGELOG.md  CREATE_PR_INSTRUCTIONS.md  LICENSE  README.md  coverage.xml  dev.py  pyproject.toml  replace-emojis.py  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  __main__.py  constants.py  database.py  emoji_detector.py  exceptions.py  file_operations.py  icon_library_manager.py  initialize_emoji_db.py  matcher.py
src/gui/: __init__.py  database_editor.py  icon_selector_dialog.py  main_window.py
tests/: __init__.py  conftest.py  test_emoji_detector.py  test_gui.py  test_icon_library.py
