[project]
name = "replace-markdown-emojis"
version = "1.0.0"
description = "Replace Unicode emojis in markdown files with professional icon images"
authors = [{name = "Rich"}]
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "markdown>=3.5",
    "emoji>=2.10.0",
    "requests>=2.31.0",
    "Pillow>=10.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

