[project]
name = "replace-markdown-emojis"
version = "1.1.0"
description = "Replace Unicode emojis in markdown files with professional icon images"
authors = [{name = "Rich Lewis", email = "1149213+RichLewis007@users.noreply.github.com"}]
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0,<6.10.0",
    "markdown>=3.5",
    "emoji>=2.10.0",
    "requests>=2.31.0",
    "urllib3>=2.6.0,<3.0",  # Fixes CVE-2025-66471 and CVE-2025-66418
    "filelock>=3.20.1",  # Fixes CVE-2025-68146
    "Pillow>=10.2.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused-function-args
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
]
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"]  # Magic numbers are fine in test assertions

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Ignore missing imports for libraries without stubs
[[tool.mypy.overrides]]
module = [
    "fuzzywuzzy.*",
    "PySide6.*",
    "requests.*",
]
ignore_missing_imports = true

# Suppress PySide6 attribute errors in GUI files (stubs are incomplete)
[[tool.mypy.overrides]]
module = [
    "src.gui.*",
]
ignore_errors = true

# Be less strict on test files
[[tool.mypy.overrides]]
module = [
    "tests.*",
]
disallow_untyped_defs = false

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "gui: marks tests as GUI tests",
    "slow: marks tests as slow running",
    "integration: marks tests as integration tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "bandit>=1.7.5",
    "pip-audit>=2.6.0",
    "isort>=5.13.0",
]

[project.scripts]
replace-emojis = "src.__main__:main"
